compiler/test-data/parser/types/errors/unclosed_generic.frel
module types.errors.unclosed_generic

scheme BrokenTypes {
    badList : List<String
}
